Agrego endpoints de admin y filtrado de atributos en usuarios
